--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Shared/_Layout.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link link-dark">
+                        <a id="departmentsMenu" class="nav-link link-dark" asp-controller="Home" asp-action="Departments">
                             <i class="bi bi-buildings me-2"></i>
                             Departments
                         </a>
