--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Home/Instructors.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Home/Instructors.cshtml
@@ -19,39 +19,40 @@
                     <option value="0">-- Select Department --</option>
                 </select>
                 <button class="btn btn-outline-primary float-end me-2" type="submit">Search</button>
-                <a href="@Url.Action("Instructors", "Home")" class="btn btn-outline-success float-end">Reset</a>
+                <a href="@Url.Action("Instructors", "Home")" class="btn btn-outline-success float-end me-2">Reset</a>
+                <button class="btn btn-outline-primary form-control float-end" type="button" onclick="openCreateInstructorModal()">Add Instructor</button>
             </form>
         </div>
     </nav>
 </div>
 <nav aria-label="Page navigation example" class="mt-3">
-    <ul class="pagination justify-content-end">
-        <li class="page-item @(Model.InstructorList.HasPreviousPage ? "" : "disabled")">
-            <a class="page-link link-dark"
-               asp-action="Instructors"
-               asp-route-searchKeyword="@ViewData["SearchKeyword"]"
-               asp-route-departmentId="@ViewData["DepartmentId"]"
-               asp-route-pageNumber="@(Model.InstructorList.PageIndex + 1)">Previous</a>
-        </li>
-        @for (int i = 1; i <= Model.InstructorList.TotalPages; i++)
-        {
-            <li class="page-item @(i == Model.InstructorList.PageIndex ? "active" : "")">
-                <a class="page-link link-dark"
-                   asp-action="Instructors"
-                   asp-route-searchKeyword="@ViewData["SearchKeyword"]"
-                   asp-route-departmentId="@ViewData["DepartmentId"]"
-                   asp-route-pageNumber="@i">@i</a>
-            </li>
-        }
-        <li class="page-item @(Model.InstructorList.HasNextPage ? "" : "disabled")">
-            <a class="page-link link-dark"
-               asp-action="Instructors"
-               asp-route-searchKeyword="@ViewData["SearchKeyword"]"
-               asp-route-departmentId="@ViewData["DepartmentId"]"
-               asp-route-pageNumber="@(Model.InstructorList.PageIndex + 1)">Next</a>
-        </li>
-    </ul>
-</nav>
+            <ul class="pagination justify-content-end">
+                <li class="page-item @(Model.InstructorList.HasPreviousPage ? "" : "disabled")">
+                    <a class="page-link link-dark"
+                       asp-action="Instructors"
+                       asp-route-searchKeyword="@ViewData["SearchKeyword"]"
+                       asp-route-departmentId="@ViewData["DepartmentId"]"
+                       asp-route-pageNumber="@(Model.InstructorList.PageIndex + 1)">Previous</a>
+                </li>
+                @for (int i = 1; i <= Model.InstructorList.TotalPages; i++)
+                {
+                    <li class="page-item @(i == Model.InstructorList.PageIndex ? "active" : "")">
+                        <a class="page-link link-dark"
+                           asp-action="Instructors"
+                           asp-route-searchKeyword="@ViewData["SearchKeyword"]"
+                           asp-route-departmentId="@ViewData["DepartmentId"]"
+                           asp-route-pageNumber="@i">@i</a>
+                    </li>
+                }
+                <li class="page-item @(Model.InstructorList.HasNextPage ? "" : "disabled")">
+                    <a class="page-link link-dark"
+                       asp-action="Instructors"
+                       asp-route-searchKeyword="@ViewData["SearchKeyword"]"
+                       asp-route-departmentId="@ViewData["DepartmentId"]"
+                       asp-route-pageNumber="@(Model.InstructorList.PageIndex + 1)">Next</a>
+                </li>
+            </ul>
+        </nav>
 <table class="table table-striped table-hover text-center">
     <thead>
         <tr>
@@ -83,9 +84,11 @@
     </tbody>
 </table>
 <div id="modalPlaceholder"></div>
+<div id="createInstructorModalPlaceholder"></div>
 @section Scripts {
     <script type="text/javascript">
         var detailsModal;
+        var createInstructorModal;
         var isLoading = false;
 
         function viewInstructorInfo(id) {
@@ -109,6 +112,7 @@
                         detailsModal.show();
                     },
                     error: () => {
+                        isLoading = false;
                         Toast.fire({
                             icon: "warning",
                             title: "Error retrieving Instructor Info"
@@ -118,6 +122,211 @@
                         isLoading = false;
                     }
                 });
+            }
+        }
+
+        function openCreateInstructorModal() {
+            if(isLoading) {
+                Toast.fire({
+                    icon: "warning",
+                    title: "Page Loading"
+                });
+
+                return;
+            } else {
+                isLoading = true;
+
+                $.ajax({
+                    url: `/Instructors/New`,
+                    type: 'GET',
+                    success: function (data) {
+                        $('#createInstructorModalPlaceholder').html(data);
+                        createInstructorModal = new bootstrap.Modal(document.getElementById('createInstructorModal'), {
+                            keyboard: false,
+                            backdrop: 'static'
+                        });
+                        createInstructorModal.show();
+                    },
+                    error: () => {
+                        isLoading = false;
+                        Toast.fire({
+                            icon: "warning",
+                            title: "Error preparing New Instructor view"
+                        });
+                    },
+                    complete: () => {
+                        isLoading = false;
+                    }
+                });
+            }
+        }
+
+        function createInstructor() {
+            if(isLoading) {
+                Toast.fire({
+                    icon: "warning",
+                    title: "Page Loading"
+                });
+
+                return;
+            } else {
+
+                let strongPasswordRegex = @Html.Raw("/^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[@.#$!%*?&^])[A-Za-z\\d@.#$!%*?&]{8,15}$/");
+
+                let employeeId = $('#createInstrEmployeeId').val();
+                let major = $('#createInstrMajor').val();
+                let department = $('#createInstrDept :selected').val();
+                let advisorySection = $('#createInstrAdvisorySection :selected').val();
+                let firstName = $('#createInstrFirstName').val();
+                let middleName = $('#createInstrMiddleName').val();
+                let lastName = $('#createInstrLastName').val();
+                let contactInfo = $('#createInstrContactInfo').val();
+                let username = $('#createInstrUsername').val();
+                let password = $('#createInstrPassword').val();
+                let confirmPassword = $('#createInstrConfirmPassword').val();
+                let emailAdd = $('#createInstrEmailAdd').val();
+
+                if(employeeId.length == 0 || employeeId == '') {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please enter an employee id"
+                    });
+
+                    return;
+                } else if(major.length == 0 || major == '') {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please enter a major"
+                    });
+
+                    return;
+                } else if(department == 0) {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please select a department"
+                    });
+
+                    return;
+                } else if(advisorySection == '@(Guid.Empty)') {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please select an advisory section"
+                    });
+
+                    return;
+                } else if(firstName.length == 0 || firstName == '') {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please enter a first name"
+                    });
+
+                    return;
+                } else if(lastName.length == 0 || lastName == '') {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please enter a last name"
+                    });
+
+                    return;
+                } else if(contactInfo.length == 0 || contactInfo == '') {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please enter a contact info"
+                    });
+
+                    return;
+                } else if(username.length == 0 || username == '') {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please enter a username"
+                    });
+
+                    return;
+                } else if(password.length == 0 || password == '') {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please enter a password"
+                    });
+
+                    return;
+                } else if(confirmPassword.length == 0 || confirmPassword == '') {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Please confirm your password"
+                    });
+
+                    return;
+                } else if(password !== confirmPassword) {
+                    Toast.fire({
+                        icon: "warning",
+                        title: "Passwords do not match"
+                    });
+
+                    return;
+                } else if(!strongPasswordRegex.test(password)) {
+                    Toast.fire({
+                        timer: 5000,
+                        icon: 'warning',
+                        title: 'Password must be at least 8 characters long, contain at least one uppercase letter, one lowercase letter, one number, and one special character.'
+                    })
+
+                    return;
+                } else {
+                    let newInstructorObj = {
+                        EmployeeId: employeeId,
+                        Major: major,
+                        DepartmentId: department,
+                        AdvisorySectionId: advisorySection,
+                        FirstName: firstName,
+                        MiddleName: middleName,
+                        LastName: lastName,
+                        ContactInfo: contactInfo,
+                        Username: username,
+                        Password: password,
+                        EmailAddress: emailAdd
+                    };
+
+                    isLoading = true;
+                
+                    let isSuccess = false;
+                    let errMssg = '';
+
+                    $.ajax({
+                        url: `/Instructors/New`,
+                        type: 'POST',
+                        data: newInstructorObj,
+                        success: (data) => {
+                            isSuccess = data.IsSuccess;
+                            if(!isSuccess) errMssg = data.Message;
+                        },
+                        error: () => {
+                            isLoading = false;
+                            errMssg = "Error creating new Instructor";
+                        },
+                        complete: () => {
+                            isLoading = false;
+
+                            if(isSuccess) {
+                                createInstructorModal.hide();
+                                $('#createInstructorModalPlaceholder').html('');
+
+                                Toast.fire({
+                                    icon: "success",
+                                    title: "Instructor created successfully"
+                                });
+
+                                setTimeout(() => {
+                                    window.location = window.location.href;
+                                }, 3000);
+                            } else {
+                                Toast.fire({
+                                    icon: "warning",
+                                    title: errMssg
+                                });
+                            }
+                        }
+                    });
+                }
             }
         }
     </script>
